Setup session resume

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,7 +7,11 @@
     <link href="/static/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>looser.win</h1>
+    <header>
+      <button type="button">New Game</button>
+      <span id="site-title">looser.win</span>
+    </header>
+    <div id="game"></div>
     <script src="/static/index.js"></script>
   </body>
 </html>
