Split up players file

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,9 +7,14 @@
     <link href="/static/style.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <button type="button">New Game</button>
+    <header id="page-header">
+      <div id="game-buttons">
+        <button type="button">Poker</button>
+      </div>
       <span id="site-title">looser.win</span>
+      <div id="page-buttons">
+        <button type="button">About</button>
+      </div>
     </header>
     <div id="game"></div>
     <script src="/static/index.js"></script>
